Fixed background gradient not stretching.

--- a/main.css
+++ b/main.css
@@ -23,11 +23,13 @@
 }
 
 body {
-  background-image: linear-gradient(var(--bgGradient1), var(--bgGradient2));
+  background: linear-gradient(var(--bgGradient1), var(--bgGradient2));
   background-repeat: no-repeat;
   display: grid;
   place-items: center;
   height: 100vh;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
 }
 
 @media (max-width: 768px) {
